# dscode

./: .gitignore  .gitmodules  AGENT.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  RELEASE.md
.codewhale/: instructions.md
.github/workflows/: ci.yml
crates/dscode-cli/: Cargo.toml
crates/dscode-cli/src/: api.rs  engine.rs  lib.rs  main.rs  render.rs  tools.rs  utils.rs
crates/dscode-cli/src/commands/: auth.rs  chat.rs  completion.rs  config.rs  mod.rs  model.rs  run.rs  session.rs  tools.rs
crates/dscode-cli/src/tools/: agent.rs  file.rs  file_tools.rs  git.rs  git_agent.rs  mod.rs  search.rs
crates/dscode-cli/tests/: integration.rs
scripts/: cross-compile.sh  install.sh
www/: index.html
