[package]
name = "dscode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mobile-first AI agent powered by DeepSeek"

[[bin]]
name = "dscode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
sha2.workspace = true
uuid.workspace = true
reqwest.workspace = true

codewhale-agent = { path = "../../vendor/CodeWhale/crates/agent" }
codewhale-config = { path = "../../vendor/CodeWhale/crates/config" }
codewhale-core = { path = "../../vendor/CodeWhale/crates/core" }
codewhale-execpolicy = { path = "../../vendor/CodeWhale/crates/execpolicy" }
codewhale-state = { path = "../../vendor/CodeWhale/crates/state" }
codewhale-secrets = { path = "../../vendor/CodeWhale/crates/secrets" }
codewhale-tools = { path = "../../vendor/CodeWhale/crates/tools" }
codewhale-mcp = { path = "../../vendor/CodeWhale/crates/mcp" }

[dev-dependencies]
