[package]
name = "dscode"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Hmbown/dscode"
description = "Mobile-first AI agent powered by DeepSeek"

[[bin]]
name = "dscode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
sha2.workspace = true
uuid.workspace = true
reqwest.workspace = true

codewhale-agent = { path = "../../vendor/CodeWhale/crates/agent" }
codewhale-config = { path = "../../vendor/CodeWhale/crates/config" }
codewhale-core = { path = "../../vendor/CodeWhale/crates/core" }
codewhale-execpolicy = { path = "../../vendor/CodeWhale/crates/execpolicy" }
codewhale-state = { path = "../../vendor/CodeWhale/crates/state" }
codewhale-tools = { path = "../../vendor/CodeWhale/crates/tools" }
codewhale-mcp = { path = "../../vendor/CodeWhale/crates/mcp" }

[dev-dependencies]
