[package]
name = "dscode"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aihop/dscode"
description = "Mobile-first AI agent powered by DeepSeek"

[[bin]]
name = "dscode"
path = "src/main.rs"

# Short alias — forwards to dscode silently
[[bin]]
name = "dsc"
path = "src/bin/dsc.rs"

[dependencies]
anyhow.workspace = true
clap_complete.workspace = true
futures-util.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword = "7.3"
rustyline = "15.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
uuid.workspace = true
reqwest.workspace = true

codewhale-agent = "0.8"
codewhale-config = "0.8"
codewhale-core = "0.8"
codewhale-execpolicy = "0.8"
codewhale-state = "0.8"
codewhale-tools = "0.8"
codewhale-mcp = "0.8"

[dev-dependencies]
